small addition to our page.

--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 	<title>Hello course era</title>
 </head>
 <body>
-	<h1>Hello course era</h1>
+	<h1>Hello coursera! It's a great course</h1>
 
 </body>
 </html>
